--- a/src/scss/_cards.scss
+++ b/src/scss/_cards.scss
@@ -4,10 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    
-    
-
-//    border: 1px solid #ccc;
+    border: 1px solid #ccc;
     flex: 1 1 200px; //kad cards mazetu ir didetu kai tampomebrowserio langa
     margin: 10px; //tarpai tarp cards
     filter: grayscale(100%);
@@ -19,8 +16,7 @@
     
 //pvz kaip veikia getbem.com/naming/ -- naming issue :) budas kaip konstruoti klases
     &__image {
-        max-width: 100%;
-        
+        max-width: 100%;        
     }
 
     &__content {
